# GDPandPOP

./: .gitignore  README.md  add_age_to_merged.py  build_pop_predictions.py  calculation-aaagcuugggcu.py  calculation_rcs.py  config.py  config_new.py  fig_delta_gdp_fan.py  fig_global_gdp_fan.py  fig_global_u5mr_fan.py  hierarchical_model-aaagcuugggcu.py  hierarchical_model.py  hierarchical_model_with_quadratic-aaagcuugggcu.py  hierarchical_model_with_rcs.py  hierarchical_model_with_rcs_age.py  hierarchical_model_with_rcs_age_v3.py  late_year_diagnostics.py  main.py  main_manuscript.docx  main_manuscript_GDPAndPOP.docx  organize_project.py  publication_figures.py  pyproject.toml  rcs_knots_hier.npy  rebuild_world_fan_constant_set.py  regional_model.py  regional_model_with_quadratic-aaagcuugggcu.py  requirements.txt  run_fig3_u5mr_v5.py  run_fig3_u5mr_v5_smart.py  run_forecast_age_v5.py  run_forecast_v5_world_agg_fixed.py  scale_rcs_age.json  simple_model_with_quadratic.py  simple_model_with_rcs.py  step3_plot_figure2.py  table_posterior_summary_compact_rcs.py  table_top10_economies_rcs.py  table_u5mr_regions.py  (+4 more)
.claude/: settings.local.json
MacroMetrics/: age_base_anchors.csv  age_predictions_scenarios.csv  merged.csv  merged_age.csv
analysis/: __init__.py  diagnostics.py  forecast_gdp.py  forecast_u5mr.py
archive/: README.md  hierarchical_model_quadratic.py  hierarchical_model_with_quadratic.py  hierarchical_model_with_rcs_age_v2.py  prediction-aaagcuugggcu.py  regional_model-aaagcuugggcu.py  regional_model_quadratic.py  regional_model_with_quadratic.py  (+4 more)
(+109 files in other folders)
