[project]
name = "gdpandpop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arviz>=0.23.3",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numba>=0.63.1",
    "numpy>=2.3.5",
    "numpyro>=0.20.0",
    "nutpie>=0.16.5",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pymc>=5.27.1",
    "pytensor>=2.37.0",
    "seaborn>=0.13.2",
]
